# web-scrapers

./: .gitignore  README.md  app.py  pyproject.toml
web_scraper/: polar.py  polar_api.py  static.py  strike.py
web_scraper/pages/: 2020 Kaggle Machine Learning and Data Science Survey.html  2020 Kaggle Machine Learning and Data Science Survey2.html  all_leeds_events.html  polar_activity.html  strike.html
