[tool.poetry]
name = "web_scraper"
version = "0.1.0"
description = ""
authors = ["jonny <jonny@insurami.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
pandas = "^1.1.2"
black = "^20.8b1"
selenium = "^3.141.0"
tqdm = "^4.48.2"
lxml = "^4.5.2"
html5lib = "^1.1"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
